# artg4

./: .gitignore  CMakeLists.txt
Core/: ActionBase.hh  ArtG4DetectorConstruction.hh  ArtG4EventAction.cc  ArtG4EventAction.hh  ArtG4PrimaryGeneratorAction.cc  ArtG4PrimaryGeneratorAction.hh  ArtG4RunAction.cc  ArtG4RunManager.cc  ArtG4SteppingAction.cc  ArtG4SteppingAction.hh  ArtG4TrackingAction.cc  ArtG4TrackingAction.hh  CMakeLists.txt  DetectorBase.hh  GeometryBase.hh  Gm2DetectorConstruction.cc  Gm2EventAction.cc  Gm2G4RunManager.h  Gm2PrimaryGeneratorAction.cc  Gm2RunAction.hh  Gm2SteppingAction.cc  PhysicsListBase.cc  PhysicsListBase.hh  RunSettingsBase.hh  artg4Main_module.cc  physicsList.cc  physicsList.hh
actionBase/: ActionBase.cc  ActionBase.hh  CMakeLists.txt  EventActionBase.cc  EventActionBase.hh  PrimaryGeneratorActionBase.cc  PrimaryGeneratorActionBase.hh  RunActionBase.cc  RunActionBase.hh  StackingActionBase.cc  StackingActionBase.hh  SteppingActionBase.cc  SteppingActionBase.hh  TrackingActionBase.cc  TrackingActionBase.hh
art/: ActionHolder.hh  ActionHolder_service.cc  CMakeLists.txt  DetectorHolder.hh  DetectorHolder_service.cc  GlobalParameters_service.cc  MaterialService.hh  MaterialService_service.cc  artg4Main_module.cc  gm2g4_module.cc
fcl/: CMakeLists.txt  actionDefaults.fcl  artg4.fcl  test.fcl  tryN04.fcl
geantInit/: ArtG4DetectorConstruction.cc  ArtG4DetectorConstruction.hh  ArtG4EventAction.cc  ArtG4EventAction.hh  ArtG4PhysicsList.cc  ArtG4PhysicsList.hh  ArtG4PrimaryGeneratorAction.cc  ArtG4PrimaryGeneratorAction.hh  ArtG4RunAction.cc  ArtG4RunAction.hh  ArtG4RunManager.cc  ArtG4RunManager.hh  ArtG4StackingAction.cc  ArtG4StackingAction.hh  ArtG4SteppingAction.cc  ArtG4SteppingAction.hh  ArtG4TrackingAction.cc  ArtG4TrackingAction.hh  CMakeLists.txt  physicsList.cc  physicsList.hh
material/: CMakeLists.txt  Materials.cc  Materials.hh  artg4Materials.cc  gm2ringsimout.root
pluginActions/: .standardActionProducer  CMakeLists.txt
pluginActions/clock/: CMakeLists.txt  ClockAction.cc  ClockAction.hh  ClockAction_service.cc  ClockAction_service.hh  clockAction_module.cc
pluginActions/muonStorageStatus/: CMakeLists.txt  EventArtHit.hh  MuonStorageStatusAction.hh  MuonStorageStatusAction_service.cc  MuonStorageStatusAction_service.hh  classes.h  classes_def.xml
pluginActions/particleGun/: CMakeLists.txt  GeneralParticleSource.cc  GeneralParticleSource.hh  ParticleGunAction.cc  ParticleGunAction.hh  ParticleGunAction_service.cc  ParticleGunAction_service.hh  SPSTimeDistribution.cc  SPSTimeDistribution.hh  SingleParticleSource.cc  SingleParticleSource.hh  g2GeneralParticleSource.cc  g2GeneralParticleSource.hh  g2SingleParticleSource.cc  g2SingleParticleSource.hh  particleGunAction_module.cc
pluginActions/physicalVolumeStore/: CMakeLists.txt  PhysicalVolumeStoreData.hh  classes.h  classes_def.xml  physicalVolumeStore_service.cc  physicalVolumeStore_service.hh
pluginActions/track/: CMakeLists.txt  TrackAction.cc  TrackAction.hh  TrackAction_service.cc  TrackAction_service.hh  TrackArtHit.hh  classes.h  classes_def.xml  trackAction_module.cc
pluginActions/uom/: uom.hh
pluginActions/writeGdml/: CMakeLists.txt  classes.h  classes_def.xml  gdmlText.hh  writeGdml_service.cc  writeGdml_service.hh
scripts/: CMakeLists.txt  Detector_service.cc_template  Detector_service.hh_template  detector_make.sh  geomTyper.py
services/: ActionHolder.hh  ActionHolder_service.cc  ActionHolder_service.hh  CMakeLists.txt  DetectorHolder_service.cc  DetectorHolder_service.hh  Dummy_service.cc  Dummy_service.hh  Geometry_service.cc  Geometry_service.hh  Geometry_servicecc.txt  Material_service.cc  Material_service.hh  PhysicsListHolder_service.cc  PhysicsListHolder_service.h  PhysicsListHolder_service.hh  PhysicsListServiceBase.hh  RunSettings_service.cc  RunSettings_service.hh  artg4Materials.cc  artg4Materials.hh
ups/: CMakeLists.txt  artg4-config.cmake.in  product_deps
util/: DataFromRunOrService.hh  StringIDs.cc  StringIDs.hh  array_macros.hh  util.cc  util.hh
vis/: CMakeLists.txt  VisManager.cc  VisManager.hh
